--- a/style.css
+++ b/style.css
@@ -80,6 +80,9 @@ Header > img {
     background-size: cover;
     margin-top: -40px
 }
+body > header > img{
+	height:600px;
+}
 
 header > a {
     color: #fff;
@@ -220,6 +223,8 @@ header > a:hover,
 
 .titleBox > p {
     font-size: 30px;
+	
+	
     color: #333333;
 }
 
