--- a/style.css
+++ b/style.css
@@ -76,13 +76,11 @@ Header > img {
     display: block;
     margin: auto;
     background: url(images/par.png)no-repeat;
-    width: 80%;
+    width: 55%;
     background-size: cover;
     margin-top: -40px
 }
-body > header > img{
-	height:600px;
-}
+
 
 header > a {
     color: #fff;
@@ -767,7 +765,7 @@ footer > .footerLeft > a {
         height:800px;
     }
     .supportProject > .rightBox > a{
-        width:70%;
+        width:50%;
         margin: 5% auto;
         font-size:4vw;
     }
@@ -977,4 +975,24 @@ footer > .footerLeft > a {
     transform: scale(0.96);
 }
 
+@media (max-width: 830px){
+header > a {
+    font-size: 2.4vw;
+    padding: 2%;
+}}
 
+
+@media (max-width: 830px){
+.supportProject > .rightBox > h4 {
+    font-size: 18px;
+}}
+
+@media (max-width: 830px){
+.supportProject > .rightBox > p {
+    font-size: 13px;
+}}
+
+@media (max-width: 830px){
+.supportProject > .rightBox > p.thanksText {
+    font-size: 2.5vw;
+}}
